--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         #food-title{
             color: green;
         }
+
+        .food .foreign{
+            font-weight: 700;
+        }
     </style>
 
     <link rel="stylesheet" href="./styles/style.css">
@@ -22,16 +26,19 @@
         <h1>This is my header no banner</h1>
     </header>
     <main>
-        <section>
+        <section id="old-dhaka" class="songs">
             <h1>Welcome to my DOM</h1>
+            <p>Lorem ipsum dolor sit amet <span> oli goli</span> adipisicing elit <span>alias</span>. Accusantium, temporibus.</p>
+            <h1>Lorem ipsum dolor sit amet consectetur <span>Some text</span>, adipisicing elit. Atque, facilis.</h1>
             <ul>
                 <li>Shafayet</li>
                 <li>bonobash</li>
                 <li id="band">Jalali set</li>
                 <li>Dom Dere Baba</li>
+                <li class="international">dubai</li>
             </ul>
         </section>
-        <section>
+        <section class="food">
             <h1 id="food-title">Food I Love</h1>
             <ul>
                 <li>Rice</li>
@@ -88,6 +95,12 @@
 
         for(const element of foreignElement){
             console.log(element.innerText)
+        }
+
+        // query selector all
+        const spanElements = document.querySelectorAll("#old-dhaka p span");
+        for(const span of spanElements){
+            console.log(span.innerText);
         }
 
 
