NodeList, HTMLCOllection, ParentNode, ChildNodes, Create Element

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <section id="players-container">
             <h1>Players</h1>
-            <ul>
+            <ul id="players-list">
                 <li>Messi</li>
                 <li>Ronaldo</li>
                 <li>Neymar</li>
@@ -131,7 +131,8 @@
 
     </script>
     <script src="./js/hello.js"></script> -->
- <script src="./js/cssInJS.js"></script>
+ <!-- <script src="./js/cssInJS.js"></script> -->
+  <script src="./js/child.js"></script>
 
 </body>
 
