Create HTML elements using JS and AppnedChild

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header>
         <h1>This is my header no banner</h1>
     </header>
-    <main>
+    <main id="main-container">
         <section id="old-dhaka" class="songs">
             <h1>Welcome to my DOM</h1>
             <p>Lorem ipsum dolor sit amet <span> oli goli</span> adipisicing elit <span>alias</span>. Accusantium,
@@ -132,7 +132,8 @@
     </script>
     <script src="./js/hello.js"></script> -->
  <!-- <script src="./js/cssInJS.js"></script> -->
-  <script src="./js/child.js"></script>
+  <!-- <script src="./js/child.js"></script> -->
+   <script src="./js/append.js"></script>
 
 </body>
 
